language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_function_definition.snap
---
source: language-server/src/tests/hover.rs
expression: "\nfn add_2(x) {\n  x + 2\n}\n"
---

fn add_2(x) {
▔▔▔↑▔▔▔▔▔▔▔  
  x + 2
}


----- Hover content (markdown) -----
```gleam
fn(Int) -> Int
```
