language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_import_unqualified_value_from_hex.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport example_module.{my_num}\nfn main() {\n  my_num\n}\n"
---

import example_module.{my_num}
                       ▔▔▔↑▔▔ 
fn main() {
  my_num
}


----- Hover content (markdown) -----
```gleam
Int
```
 Exciting documentation
 Maybe even multiple lines

View on [HexDocs](https://hex.hexdocs.pm/example_module.html#my_num)
