language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_imported_function.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport example_module\nfn main() {\n  example_module.my_fn\n}\n"
---

import example_module
fn main() {
  example_module.my_fn
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑▔▔
}


----- Hover content (markdown) -----
```gleam
fn() -> Nil
```
