language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_label_shorthand_in_pattern_call_arg_2.snap
---
source: language-server/src/tests/hover.rs
expression: "\npub type Wibble { Wibble(arg1: Int, arg2: Bool) }\n\npub fn main() {\n  let Wibble(arg2:, ..) = todo\n}\n"
---

pub type Wibble { Wibble(arg1: Int, arg2: Bool) }

pub fn main() {
  let Wibble(arg2:, ..) = todo
             ▔↑▔▔▔            
}


----- Hover content (markdown) -----
```gleam
Bool
```
